compiler/testData/diagnostics/tests/regressions/kt2956.kt
konst a: String = <!NO_COMPANION_OBJECT!>Nothing<!>